--- a/views/_globals.njk
+++ b/views/_globals.njk
@@ -1,6 +1,6 @@
-{% set name = "safe.fiery.me" %}
+{% set name = "safe.b68dev.xyz" %}
 {% set motto = "A small safe worth protecting." %}
-{% set description = "A pomf-like file uploading service that doesn't suck." %}
+{% set description = "A keqw-like file uploading service that doesn't suck." %}
 {% set keywords = "upload,lolisafe,file,images,hosting,bobby,fiery" %}
 
 {# Used in home.njk and nojs.njk #}
@@ -38,21 +38,21 @@
   {
     attrs: {
       title: 'Home',
-      href: 'https://fiery.me'
+      href: 'https://bravo68web.me'
     },
     icon: 'icon-home icon-2x'
   },
   {
     attrs: {
-      title: 'Blog (Gatsby)',
-      href: 'https://blog.fiery.me'
+      title: 'Blog (Hashnode)',
+      href: 'https://blog.bravo68web.me'
     },
     icon: 'icon-gatsby icon-2x'
   },
   {
     attrs: {
       title: 'Paste (PrivateBin)',
-      href: 'https://paste.fiery.me'
+      href: 'https://paste.itsmebravo.dev'
     },
     icon: 'icon-privatebin icon-2x'
   },
